# northwind-loco-svelte

./: Cargo.toml  run
.cargo/: config.toml
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: .env.development  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/components/: index.ts
frontend/src/lib/components/filters/: BooleanFilter.svelte  NumberFilter.svelte  PlaceholderFilter.svelte  StringFilter.svelte  config.ts  index.ts
frontend/src/lib/components/icons/: ArrowLongLeftIcon.svelte  ArrowsRightLeftIcon.svelte  Bar3Icon.svelte  ChevronLeftIcon.svelte  ChevronRightIcon.svelte  HomeIcon.svelte  InboxStackIcon.svelte  ShoppingBagIcon.svelte  ShoppingCartIcon.svelte  index.ts
frontend/src/lib/components/navigation/: Navbar.svelte  Sidebar.svelte
frontend/src/lib/configs/: siteOptions.ts  website.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/(pages)/: +layout.svelte
frontend/src/routes/customers/: +page.server.ts  +page.svelte
frontend/src/routes/employees/: +page.server.ts  +page.svelte
frontend/src/routes/orders/: +page.server.ts  +page.svelte
frontend/src/routes/products/: +page.server.ts  +page.svelte
frontend/src/routes/suppliers/: +page.server.ts  +page.svelte
src/: app.rs
src/controllers/: customers.rs  employees.rs  mod.rs  orders.rs  products.rs  shippers.rs  suppliers.rs  utils.rs
src/initializers/: mod.rs  opentelemetry.rs  view_engine.rs
src/models/: customers.rs  employees.rs  employeeterritories.rs  mod.rs  order_details.rs  products.rs  regions.rs  shippers.rs  territories.rs  users.rs
src/models/_entities/: categories.rs  customers.rs  employees.rs  employeeterritories.rs  mod.rs  order_details.rs  orders.rs  prelude.rs  products.rs  regions.rs  shippers.rs  suppliers.rs  territories.rs
src/views/: mod.rs  orders.rs  products.rs  utils.rs
tests/models/: users.rs
tests/requests/: auth.rs  customers.rs  employees.rs  mod.rs  orders.rs  prepare_data.rs  products.rs  shippers.rs  suppliers.rs
(+59 files in other folders)
