[workspace]

[package]
name = "northwind_api"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "northwind_loco_svelte-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { git = "https://github.com/Rudo2204/loco.git", branch = "v0.14.1-otel" }
# loco-rs = { version = "0.14.1" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.19" }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = { version = "0.9.4" }
init-tracing-opentelemetry = { version = "0.27.1", features = ["opentelemetry-otlp", "otlp", "tonic", "tracing_subscriber_ext"] }
opentelemetry_sdk = "0.28.0"
opentelemetry = "0.28.0"
opentelemetry-appender-tracing = { version = "0.28.1", features = ["experimental_use_tracing_span_context"] }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
# tracing-logfmt-otel = { version = "0.4.0", features = ["ansi_logs"] } # for logfmt format with otel if needed
# /view engine

[[bin]]
name = "northwind_loco_svelte-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
